# mstd

./: .gitignore  CMakeLists.txt  LICENSE  README.md
mstd/algorithm/: accumulate.hpp  adjacent_difference.hpp  adjacent_find.hpp  copy.hpp  copy_backward.hpp  count.hpp  equal.hpp  fill.hpp  find.hpp  find_end.hpp  find_first_of.hpp  for_each.hpp  generate.hpp  includes.hpp  inner_product.hpp  iota.hpp  lexicographical_compare.hpp  max.hpp  min.hpp  minmax.hpp  mismatch.hpp  partial_sum.hpp  partitioin.hpp  remove.hpp  replace.hpp  reverse.hpp  rotate.hpp  search.hpp  shuffle.hpp  swap.hpp  swap_ranges.hpp  transform.hpp  unique.hpp
mstd/algorithm/heap/: make_heap.hpp  pop_heap.hpp  push_heap.hpp  sort_heap.hpp
mstd/algorithm/set/: inplace_merge.hpp  merge.hpp
mstd/algorithm/sort/: nth_element.hpp  partial_sort.hpp
mstd/algorithm/sorted/: binary_search.hpp  equal_range.hpp  lower_bound.hpp  upper_bound.hpp
mstd/allocator/: allocator.hpp
mstd/container/hash/: hash_function.hpp  hash_iterator_imp.hpp  hash_table.hpp  hash_table_decl.hpp
mstd/detail/: bit_copyable.hpp  concept.hpp  heap.hpp  insertion_sort.hpp  median_of_3_partition.hpp  merge_backward.hpp  merge_with_buffer.hpp  merge_without_buffer.hpp  rotate_with_buffer.hpp
mstd/functional/: function.hpp  identity.hpp
mstd/iterator/: base.hpp  concept.hpp  meta.hpp  reverse_iterator.hpp  tag.hpp  util.hpp
mstd/memory/: allocator.hpp  construct.hpp  temporary_buffer.hpp  uninitialized.hpp
mstd/test/: algorithm.cpp  hash_table.cpp  iterator.cpp  memory.cpp  test_main.cpp
mstd/utility/: rel_ops.hpp
